--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     apiKey: "AIzaSyAlYasR91o2zMvD3OYYNFHdoyAAvfkiK80",
     authDomain: "spaceclicker-78ef5.firebaseapp.com",
     projectId: "spaceclicker-78ef5",
-    storageBucket: "spaceclicker-78ef5.firebasestorage.app",
+    storageBucket: "storageBucket: "spaceclicker-78ef5.appspot.com",
     messagingSenderId: "1007817982727",
     appId: "1:1007817982727:web:c653b6f656b017cbb73ba2"
   };
