--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     signInWithEmailAndPassword
   } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js";
   import {
-    initializeFirestore,
-    doc,
-    setDoc,
-    getDoc
-  } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore.js";
+    getDatabase,
+    ref,
+    set,
+    get,
+    child,
+    update
+  } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-database.js";
 
   // === Конфигурация Firebase ===
   const firebaseConfig = {
@@ -23,76 +25,75 @@
     projectId: "spaceclicker-78ef5",
     storageBucket: "spaceclicker-78ef5.appspot.com",
     messagingSenderId: "1007817982727",
-    appId: "1:1007817982727:web:c653b6f656b017cbb73ba2"
+    appId: "1:1007817982727:web:c653b6f656b017cbb73ba2",
+    databaseURL: "https://spaceclicker-78ef5-default-rtdb.firebaseio.com"
   };
 
   // === Инициализация Firebase ===
   const app = initializeApp(firebaseConfig);
-
-  // 🚀 Главное исправление: отключаем “Listen” потоки
-  const db = initializeFirestore(app, { useFetchStreams: false });
-
   const auth = getAuth(app);
+  const db = getDatabase(app);
 
-  // === Регистрация пользователя ===
+  // === Регистрация ===
   async function doRegister() {
-    const username = document.getElementById('regUsername').value.trim();
-    const password = document.getElementById('regPassword').value.trim();
+    const username = document.getElementById("regUsername").value.trim();
+    const password = document.getElementById("regPassword").value.trim();
     const t = translations[currentLanguage];
 
     if (!username || !password) {
-      showMsg('registerMsg', t.enterUsernamePassword, false);
+      showMsg("registerMsg", t.enterUsernamePassword, false);
       return;
     }
 
     const email = `${username}@clicker.com`;
     try {
       const userCred = await createUserWithEmailAndPassword(auth, email, password);
-      await setDoc(doc(db, "users", userCred.user.uid), {
+      const uid = userCred.user.uid;
+      await set(ref(db, "users/" + uid), {
         username,
         count: 0,
         money: 0,
         level: 0,
-        achievements: [],
         createdAt: new Date().toISOString()
       });
-      showMsg('registerMsg', t.registrationSuccess, true);
+      showMsg("registerMsg", t.registrationSuccess, true);
       showLogin();
     } catch (error) {
-      showMsg('registerMsg', error.message, false);
+      showMsg("registerMsg", error.message, false);
       console.error(error);
     }
   }
 
-  // === Вход пользователя ===
+  // === Вход ===
   async function doLogin() {
-    const username = document.getElementById('loginUsername').value.trim();
-    const password = document.getElementById('loginPassword').value.trim();
+    const username = document.getElementById("loginUsername").value.trim();
+    const password = document.getElementById("loginPassword").value.trim();
     const t = translations[currentLanguage];
 
     if (!username || !password) {
-      showMsg('loginMsg', t.enterUsernamePassword, false);
+      showMsg("loginMsg", t.enterUsernamePassword, false);
       return;
     }
 
     const email = `${username}@clicker.com`;
     try {
       const userCred = await signInWithEmailAndPassword(auth, email, password);
-      const userDoc = await getDoc(doc(db, "users", userCred.user.uid));
+      const uid = userCred.user.uid;
 
-      if (userDoc.exists()) {
-        const data = userDoc.data();
+      const snapshot = await get(child(ref(db), "users/" + uid));
+      if (snapshot.exists()) {
+        const data = snapshot.val();
         currentUsername = data.username;
         count = data.count || 0;
         money = data.money || 0;
         internal_level = data.level || 0;
-        showMsg('loginMsg', t.loginSuccess, true);
+        showMsg("loginMsg", t.loginSuccess, true);
         setTimeout(showLoading, 800);
       } else {
-        showMsg('loginMsg', t.userNotFound, false);
+        showMsg("loginMsg", t.userNotFound, false);
       }
     } catch (error) {
-      showMsg('loginMsg', error.message, false);
+      showMsg("loginMsg", error.message, false);
       console.error(error);
     }
   }
@@ -105,12 +106,11 @@
     const user = auth.currentUser;
     if (user) {
       try {
-        await setDoc(doc(db, "users", user.uid), {
-          username: currentUsername,
+        await update(ref(db, "users/" + user.uid), {
           count,
           money,
           level: internal_level
-        }, { merge: true });
+        });
       } catch (error) {
         console.error("Ошибка сохранения:", error);
       }
@@ -122,6 +122,7 @@
   window.doLogin = doLogin;
   window.increment = increment;
 </script>
+
 
 
   <style>
